[package]
name = "bevy_ratatui"
description = "A Bevy plugin for building terminal user interfaces with Ratatui"
version = "0.9.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cxreiff/bevy_ratatui"
documentation = "https://docs.rs/bevy_ratatui"
authors = ["cxreiff <cooper@cxreiff.com>", "Joshka"]
categories = ["command-line-interface"]
keywords = ["cli", "ratatui", "terminal", "tui", "bevy"]

[dependencies]
bevy = { version = "0.16", default-features = false }
bitflags = "2.8.0"
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", optional = true }
ratatui = { version = "0.29.0", default-features = false }
smol_str = "0.2.2"
soft_ratatui = { version = "0.0.8", optional = true }
tracing = "0.1.41"

[dev-dependencies]
rand = "0.9.0"
bevy = { version = "0.16", default-features = false, features = ["bevy_state"] }
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = ["std", "async_executor", "crossterm"]
crossterm = ["dep:crossterm", "ratatui/crossterm"]
windowed = ["dep:soft_ratatui", "bevy/default"]

# Features for `std` platforms
std = ["bevy/std"]
async_executor = ["bevy/async_executor"]

# Features for `no_std` platforms
libm = ["bevy/libm"]
critical-section = ["bevy/critical-section"]

# Allow enabling serde support for downstream crates
serde = ["crossterm/serde"]
